FIX: `ul` in notes overflowing the note box (#2531)
Unordered lists in note boxes were having their
bullets overflow the left-side of the note box.
Adjusted the note shape to catch these missed lists.

- Tidied up meta-headers in _list-components.scss
- Added `$UnorderedList--FirstLevel` to
`_notes-boxed-shape`
- Regenerated styles

Refs: #2508

--- a/styles/output/dev-math-pdf.css
+++ b/styles/output/dev-math-pdf.css
@@ -1876,6 +1876,9 @@ a[role="doc-noteref"] {
   background-color: #F4F7F4;
   padding: 0.7rem; }
 
+[data-type="note"]:not([class]) > .os-note-body > ul {
+  margin-left: 24px; }
+
 .links-to-literacy {
   margin-bottom: 1.4rem; }
 
@@ -1998,6 +2001,9 @@ a[role="doc-noteref"] {
   line-height: 1.5rem;
   background-color: #F4F7F4;
   padding: 0.7rem; }
+
+[data-type="note"]:not([class]) > .os-note-body > ul {
+  margin-left: 24px; }
 
 .os-eos.os-section-exercises-container > section.section-exercises > section {
   margin-bottom: 1.4rem;
